--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -1821,13 +1821,13 @@ INFO | 2015-10-13 17:44:46,325 |  logs | root | Logging a test message from /
 tc@box:~$ 
 \end{lstlisting}
 
-\paragraph From this we can see that there were three log messages displayed and that the output is arranged into columns. Getting the output nice and neat like this is the main reason we had to write so much code in our python app and config file, but it is really worth it when you are trying to track down a problem.
+\paragraph{} From this we can see that there were three log messages displayed and that the output is arranged into columns. Getting the output nice and neat like this is the main reason we had to write so much code in our python app and config file, but it is really worth it when you are trying to track down a problem.
 
 \paragraph{} It is a good idea to log anything that you think that you might want to have a record of and that you might need to look up in order to bug fix. Unfortunately though there are no rules for what to log and what not to log. Obviously you could log \emph{everything} but this would possibly waste disk space, but not logging enough might mean that you don't have sufficient logs to help you fix problems. However, with experimentation and experience you will develop skills in gauging the right amount of and type of data to log.
 
 \section{Testing}
 \label{testing}
-\paragraph{}
+\paragraph{} 
 
 %\end{comment}
 
