Minor edit to directory listing for bootstrap

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -1919,8 +1919,8 @@ FAILED (failures=1)
 static/
 static/css/
 static/ico/
-static/images/
-static/javascript/
+static/img/
+static/js/
 \end{lstlisting}
 
 \paragraph{} Make yourself a similar directory hierachy to that shown above then download Bootstrap from \url{the bootstrap site} and unpack it, e.g.
