Add base template example for bootstrap

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -1933,7 +1933,17 @@ static/js/
 \paragraph{} Now move the bootstrap files into directory hierarchy that you created. We can now start to use bootstrap to provide some style. The first thing to do is to create a simple Flask app that returns an HTML page using a template. We will then extend the template to add some bootstrap functionality to it. So, let's start with the basic template:
 
 \begin{lstlisting}
-FLASK TEMPLATE LISTING
+<html>
+<head>
+<title>Bootstrap Demonstation</title>
+</head>
+<body>
+<h1>HELLO</h1>
+<h2>Napier</h2>
+<p>Demonstrating a flask app with templates for html generation and bootstrap
+for a little bit of style</p>
+</body>
+</html>
 \end{lstlisting}
 
 \paragraph{} Now we need a basic Flask app that uses the template:
