--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -1949,7 +1949,15 @@ for a little bit of style</p>
 \paragraph{} Now we need a basic Flask app that uses the template:
 
 \begin{lstlisting}
-FLASK APP LISTING
+from flask import Flask, render_template
+app = Flask(__name__)
+
+@app.route('/')
+def root():
+  return render_template('base.html'), 200
+
+if __name__ == "__main__":
+  app.run(host='0.0.0.0', debug=True)
 \end{lstlisting}
 
 \paragraph{} Take a look at how your unstyled Flask app appears in the browser. Not very pretty is it? 
